# crusoe-nemotron-harness

./: .gitignore  DEMO_SCRIPT.md  DEPLOY.md  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
examples/: leaderboard_demo.py
src/crusoe_nemotron_harness/: __init__.py  budget.py  cost.py  egress.py  harness.py  providers.py  snap.py  trace.py  vet.py
tests/: test_budget.py  test_cost.py  test_egress.py  test_harness.py  test_providers.py  test_snap.py  test_trace.py  test_vet.py
